Fix issue of author container overflowing the view

--- a/src/containers/CheckoutPage/CheckoutPage.css
+++ b/src/containers/CheckoutPage/CheckoutPage.css
@@ -3,7 +3,7 @@
 }
 
 .authorContainer {
-  margin: 1rem;
+  padding: 1rem;
 }
 
 .receipt {
